@@ -52,6 +52,8 @@
 <!ENTITY gfcode.label "GFCode">
 <!ENTITY breakTags.label "Break HTML">
 
+<!ENTITY sigTextbox.label "Signature textbox">
+
 <!ENTITY quickpost.label "QuickPost">
 
 <!ENTITY onTopicLists.label "Topic QuickPost">
