@@ -7,6 +7,7 @@
     * More robust QuickPost which may fix the bugs affecting some people
     * Fix QuickPost appearing on message detail pages for mods
     * Fix highlighting of VIPs/mods/admins
+    * Add option to hide the signature textbox
 
 2011-02-05:
     * version 0.7.11
